@@ -1,5 +1,8 @@
 2006-08-08  Han-Wen Nienhuys  <hanwen@lilypond.org>
 
+	* input/manual/chord-names-jazz.ly (banterProperties):
+	instrumentName update
+
 	* scm/define-event-classes.scm (lambda): use ly:is-listened-event-class
 
 	* lily/ly-module.cc (ly_module_symbols): use ly_hash_table_keys
